moved rake task class to models dir, utilized model in json route

--- a/app/views/birthday/show.html.erb
+++ b/app/views/birthday/show.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @celebrities.each do |celebrity| %>
     <li>
-      <%= celebrity %>
+      <%= celebrity.name %>
     </li>
   <% end %>
 </ul>
